--- a/WeCanHelp/WeCanHelpOfficeAppWeb/App/Home/Home.html
+++ b/WeCanHelp/WeCanHelpOfficeAppWeb/App/Home/Home.html
@@ -41,7 +41,7 @@
 <div id="content-main">
 
     <ul class="nav navbar-nav navbar-right">
-        <li ng-show="userInfo.isAuthenticated" ><a class="btn btn-link" ng-click="logout()">Logout</a></li>
+        <!--<li ng-show="userInfo.isAuthenticated" ><a class="btn btn-link" ng-click="logout()">Logout</a></li>-->
         <li ng-hide="userInfo.isAuthenticated"><a class="btn btn-link" ng-click="login()">Login</a></li>
     </ul>
 
